--- a/WebsiteBanGiaySneaker/WebsiteBanGiaySneaker/Views/CuaHang/FooterPartial.cshtml
+++ b/WebsiteBanGiaySneaker/WebsiteBanGiaySneaker/Views/CuaHang/FooterPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿<div class="footer_agileinfo_w3">
     <div class="footer_inner_info_w3ls_agileits">
         <div class="col-md-3 footer-left">
-            <h2><a href="index.html"><span>Y</span>ugo Shoes </a></h2>
-            <p>Luôn cố gắng đem đến khách hàng sự phục vụ tốt nhất.</p>
+            <h2><a href="index.html"><span>G</span>ooFlow Shoes </a></h2>
+            <p>Luôn cố gắng mang lại sự phục vụ tốt nhất.</p>
             <ul class="social-nav model-3d-0 footer-social social two">
                 <li>
                     <a href="#" class="facebook">
@@ -41,7 +41,7 @@
                             </div>
                             <div class="address-right">
                                 <h6>Số điện thoại</h6>
-                                <p>+84 868 04 05 98</p>
+                                <p>+84 66988356</p>
                             </div>
                             <div class="clearfix"> </div>
                         </div>
@@ -51,7 +51,7 @@
                             </div>
                             <div class="address-right">
                                 <h6>Địa chỉ Email</h6>
-                                <p>Email :<a href="mailto:example@email.com">doanngocthien98@gmail.com</a></p>
+                                <p>Email : <a href="mailto:example@email.com">hutechgooflow2018@gmail.com</a></p>
                             </div>
                             <div class="clearfix"> </div>
                         </div>
@@ -62,7 +62,7 @@
                             <div class="address-right">
                                 <h6>Địa chỉ</h6>
                                 <p>
-                                    47/42/25 Bùi Đình Tuý, Phường 24, Quận Bình Thạnh, TP.HCM, Việt Nam.
+                                    475A Điện Biên Phủ, Phường 24, Quận Bình Thạnh, TP.HCM, Việt Nam.
                                 </p>
                             </div>
                             <div class="clearfix"> </div>
@@ -71,13 +71,13 @@
                 </div>
                 <div class="col-md-6 sign-gd flickr-post">
                     <h4>Fan<span>page</span></h4>
-                    <iframe src="https://www.facebook.com/ngoc.thienn.98" width="500" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://www.facebook.com/i.am.7on9" width="500" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
         <div class="clearfix"></div>
 
-        <p class="copy-right-w3ls-agileits"> Design by <a href="http://facebook.com/ngoc.thienn.98">Đoàn Ngọc Thiện</a></p>
+        <p class="copy-right-w3ls-agileits"> Design by <a href="http://facebook.com/i.am.7on9">GooFlow</a></p>
     </div>
 </div>
