--- a/WebsiteBanGiaySneaker/WebsiteBanGiaySneaker/Views/CuaHang/GioiThieu.cshtml
+++ b/WebsiteBanGiaySneaker/WebsiteBanGiaySneaker/Views/CuaHang/GioiThieu.cshtml
@@ -11,16 +11,16 @@
                 <img src="~/Content/NguoiDung/images/ab.jpg" alt=" " class="img-responsive">
             </div>
             <div class="col-md-6 news-right">
-                <h4>Chào mừng đến với Yugo Shoes</h4>
+                <h4>Chào mừng đến với GooFlow Shoes</h4>
                 <p class="sub_p">
-                    Yugo Shoes được thành lập vào năm 2018 với mong muốn cung cấp cho cộng đồng sneakerhead một nguồn số ít phục vụ tất cả các tin tức liên quan trong thế giới giày dép.
+                    GooFlow Shoes được thành lập vào năm 2018 với mong muốn cung cấp cho cộng đồng sneakerhead một nguồn số ít phục vụ tất cả các tin tức liên quan trong thế giới giày dép.
                     Kể từ đó, nó đã phát triển thành điểm đến đầu tiên của trang web cho ngày phát hành thu hút người chơi sneaker, xem trước các dự án sắp tới, quần áo sneaker NBA và nhiều hơn nữa trong một kênh cao cấp.
                     Hơn nữa, chúng tôi có kết nối mạnh mẽ với tất cả các thương hiệu yêu thích của bạn, có nghĩa là Sneaker News liên tục hoạt động độc quyền trên phương tiện truyền thông và ra mắt sản phẩm mang lại cho bạn quyền truy cập bên trong.
                 </p>
                 <p>
-                    Yugo Shoes cũng cung cấp nội dung độc quyền thông qua kênh Chọn tin tức Sneaker của chúng tôi, hiển thị mọi thứ từ bộ sưu tập sneaker của các thành viên cộng đồng đến các bản phát hành cộng tác sắp tới.
+                    GooFlow Shoes cũng cung cấp nội dung độc quyền thông qua kênh Chọn tin tức Sneaker của chúng tôi, hiển thị mọi thứ từ bộ sưu tập sneaker của các thành viên cộng đồng đến các bản phát hành cộng tác sắp tới.
                     Và nội dung không kết thúc ở đây trên trang chủ - chúng tôi liên tục cung cấp cho bạn các tính năng bổ sung thông qua các kênh truyền thông xã hội khác nhau của chúng tôi (Facebook, Instagram, Twitter, Google Plus).
-                    Ngày nay, mạng lưới tin tức kỹ thuật số và xã hội của Yugo Shoes phục vụ khán giả toàn cầu với hơn 20 triệu người tiêu dùng trẻ mỗi tháng.
+                    Ngày nay, mạng lưới tin tức kỹ thuật số và xã hội của GooFlow Shoes phục vụ khán giả toàn cầu với hơn 20 triệu người tiêu dùng trẻ mỗi tháng.
                 </p>
             </div>
             <div class="clearfix"> </div>
