--- a/WebsiteBanGiaySneaker/WebsiteBanGiaySneaker/Areas/Admin/Views/Login/Login.cshtml
+++ b/WebsiteBanGiaySneaker/WebsiteBanGiaySneaker/Areas/Admin/Views/Login/Login.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Yugo Shose Admin</title>
+    <title>GooFlow Shose Admin</title>
     <!-- Bootstrap Core CSS -->
     <link href="~/Content/Admin/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- MetisMenu CSS -->
