--- a/WebsiteBanGiaySneaker/WebsiteBanGiaySneaker/Areas/Admin/Views/Shared/AdminLayout.cshtml
+++ b/WebsiteBanGiaySneaker/WebsiteBanGiaySneaker/Areas/Admin/Views/Shared/AdminLayout.cshtml
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Yugo Shoes Admin</title>
+    <title>GooFlow Shoes Admin</title>
     <!-- Bootstrap Core CSS -->
     <link href="~/Content/Admin/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- MetisMenu CSS -->
@@ -50,7 +50,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="@Url.Action("Index", "ThongKe")">Yugo Shoes Admin</a>
+                <a class="navbar-brand" href="@Url.Action("Index", "ThongKe")">GooFlow Shoes Admin</a>
             </div>
             <!-- /.navbar-header -->
             <ul class="nav navbar-top-links navbar-right">
