--- a/WebsiteBanGiaySneaker/WebsiteBanGiaySneaker/Views/Home/MenuPartial.cshtml
+++ b/WebsiteBanGiaySneaker/WebsiteBanGiaySneaker/Views/Home/MenuPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="header_agileits">
     <div class="logo">
-        <h1><a class="navbar-brand"><span>Yugo</span> <i>Shoes</i></a></h1>
+        <h1><a class="navbar-brand"><span>GooFlow</span> <i>Shoes</i></a></h1>
     </div>
     <div class="overlay overlay-contentpush">
         <button type="button" class="overlay-close"><i class="fa fa-times" aria-hidden="true"></i></button>
