--- a/WebsiteBanGiaySneaker/WebsiteBanGiaySneaker/Views/Layout/NguoiDungLayout.cshtml
+++ b/WebsiteBanGiaySneaker/WebsiteBanGiaySneaker/Views/Layout/NguoiDungLayout.cshtml
@@ -3,10 +3,10 @@
 <html lang="zxx">
 
 <head>
-    <title>Yugo Shoes</title>
+    <title>GooFlow Shoes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="Yugo Shoes Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
+    <meta name="keywords" content="GooFlow Shoes Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
     <script type="application/x-javascript">
         addEventListener("load", function () {
